--- a/index.html
+++ b/index.html
@@ -1622,8 +1622,8 @@ ${scriptContent}
                             const itemClasses = index === 0 ? '' : 'thumbnail-item-separator';
                             return `
                                 <div class="${itemClasses}"> 
-                                    <p class="font-semibold text-gray-800 mb-0.5">"${thumb.title}"</p>
-                                    <p class="text-sm text-gray-600 leading-tight">Descrição: ${thumb.description}</p>
+                                    <p class="font-semibold text-gray-800 dark:text-gray-200 mb-0.5">"${thumb.title}"</p>
+                                    <p class="text-sm text-gray-600 dark:text-gray-300 leading-tight">Descrição: ${thumb.description}</p>
                                 </div>
                             `;
                         }).join('\n');
@@ -1640,8 +1640,8 @@ ${scriptContent}
                             
                             <div class="mt-4 space-y-6">
                                 <div>
-                                    <h4 class="font-bold text-lg text-gray-700 mb-2">Títulos de Vídeos:</h4>
-                                    <div class="p-3 border border-gray-200 rounded-md bg-white shadow-sm space-y-2">
+                                    <h4 class="font-bold text-lg text-gray-700 dark:text-gray-300 mb-2">Títulos de Vídeos:</h4>
+                                    <div class="p-3 border border-gray-200 dark:border-gray-600 rounded-md bg-gray-50 dark:bg-gray-700 shadow-sm space-y-2 text-gray-800 dark:text-gray-200">
                                         ${titlesListHtml}
                                     </div>
                                     <div class="mt-4">
@@ -1652,8 +1652,8 @@ ${scriptContent}
                                     </div>
                                 </div>
                                 <div>
-                                    <h4 class="font-bold text-lg text-gray-700 mb-2">Thumbnails:</h4>
-                                    <div class="p-3 border border-gray-200 rounded-md bg-white shadow-sm">${thumbnailsListHtml}</div>
+                                    <h4 class="font-bold text-lg text-gray-700 dark:text-gray-300 mb-2">Thumbnails:</h4>
+                                    <div class="p-3 border border-gray-200 rounded-md bg-gray-50 dark:bg-gray-700 dark:border-gray-600 text-gray-800 dark:text-gray-200">${thumbnailsListHtml}</div>
                                 </div>
                             </div>
                         </div>
@@ -1703,10 +1703,10 @@ ${scriptContent}
                 let analysisHtml = '<div class="space-y-4">';
                 analysis.forEach(item => {
                     analysisHtml += `
-                        <div class="p-3 border border-gray-200 rounded-md dark:border-gray-600">
-                            <p class="font-semibold">${item.titulo_original}</p>
-                            <p class="text-sm mt-1"><strong>Nota de CTR:</strong> <span class="text-indigo-500 font-bold">${item.nota_ctr} / 10</span></p>
-                            <p class="text-sm mt-1"><strong>Sugestão:</strong> ${item.sugestao_melhora}</p>
+                        <div class="p-3 border border-gray-200 rounded-md dark:border-gray-600 bg-white dark:bg-gray-700">
+                            <p class="font-semibold text-gray-800 dark:text-gray-100">${item.titulo_original}</p>
+                            <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Nota de CTR:</strong> <span class="text-indigo-500 font-bold">${item.nota_ctr} / 10</span></p>
+                            <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Sugestão:</strong> ${item.sugestao_melhora}</p>
                         </div>
                     `;
                 });
