--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         .action-bar-buttons-group .btn-container .btn:first-child { margin-left: 0; }
 
         /* ========================================================== */
-        /* ======== ESTILOS PARA A BARRA DE PROGRESSO ========= */
+        /* ======== ESTILOS PARA A BARRA DE PROGRESO ========= */
         /* ========================================================== */
         #progressBar {
             transition: width 0.5s ease-in-out; /* Animação suave do crescimento da barra */
@@ -395,12 +395,8 @@
         /* ========================================================== */
         /* ===== CORREÇÃO DE COR DE TEXTO PARA MODO CLARO ===== */
         /* ========================================================== */
-        body:not(.dark) #titlesThumbnailsSection .p-3 p {
-            color: #374151; /* Cor de texto para modo claro */
-        }
-        body:not(.dark) #titlesThumbnailsSection .font-semibold {
-            color: #1f2937; /* Cor mais escura para o título (gray-800) */
-        }
+        /* REMOVIDO: body:not(.dark) #titlesThumbnailsSection .p-3 p { color: #374151; } */
+        /* REMOVIDO: body:not(.dark) #titlesThumbnailsSection .font-semibold { color: #1f2937; } */
 
         /* ========================================================== */
         /* ==================== MODO ESCURO ======================= */
@@ -1632,7 +1628,7 @@ ${scriptContent}
                     const fullInnerHtml = `
                         <div class="whitespace-normal">
                             <div class="section-header">
-                                <h3>Títulos e Thumbnails</h3>
+                                <h3 class="text-gray-800 dark:text-gray-100">Títulos e Thumbnails</h3>
                                 <div class="header-buttons">
                                     <button class="copy-btn" onclick="copyTextToClipboard(document.getElementById('titlesThumbnailsSection').textContent)">Copiar</button>
                                 </div>
@@ -1640,8 +1636,8 @@ ${scriptContent}
                             
                             <div class="mt-4 space-y-6">
                                 <div>
-                                    <h4 class="font-bold text-lg text-gray-700 dark:text-gray-300 mb-2">Títulos de Vídeos:</h4>
-                                    <div class="p-3 border border-gray-200 dark:border-gray-600 rounded-md bg-gray-50 dark:bg-gray-700 shadow-sm space-y-2 text-gray-800 dark:text-gray-200">
+                                    <h4 class="font-bold text-lg text-gray-700 dark:text-gray-200 mb-2">Títulos de Vídeos:</h4>
+                                    <div class="p-3 border border-gray-200 dark:border-gray-700 rounded-md bg-gray-50 dark:bg-gray-800 shadow-sm space-y-2 text-gray-700 dark:text-gray-300">
                                         ${titlesListHtml}
                                     </div>
                                     <div class="mt-4">
@@ -1652,8 +1648,8 @@ ${scriptContent}
                                     </div>
                                 </div>
                                 <div>
-                                    <h4 class="font-bold text-lg text-gray-700 dark:text-gray-300 mb-2">Thumbnails:</h4>
-                                    <div class="p-3 border border-gray-200 rounded-md bg-gray-50 dark:bg-gray-700 dark:border-gray-600 text-gray-800 dark:text-gray-200">${thumbnailsListHtml}</div>
+                                    <h4 class="font-bold text-lg text-gray-700 dark:text-gray-200 mb-2">Thumbnails:</h4>
+                                    <div class="p-3 border border-gray-200 dark:border-gray-700 rounded-md bg-gray-50 dark:bg-gray-800 shadow-sm text-gray-700 dark:text-gray-300">${thumbnailsListHtml}</div>
                                 </div>
                             </div>
                         </div>
@@ -1703,8 +1699,8 @@ ${scriptContent}
                 let analysisHtml = '<div class="space-y-4">';
                 analysis.forEach(item => {
                     analysisHtml += `
-                        <div class="p-3 border border-gray-200 rounded-md dark:border-gray-600 bg-white dark:bg-gray-700">
-                            <p class="font-semibold text-gray-800 dark:text-gray-100">${item.titulo_original}</p>
+                        <div class="p-3 border border-gray-200 rounded-md dark:border-gray-700 bg-white dark:bg-gray-800 shadow-sm">
+                            <p class="font-semibold text-gray-800 dark:text-gray-200">${item.titulo_original}</p>
                             <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Nota de CTR:</strong> <span class="text-indigo-500 font-bold">${item.nota_ctr} / 10</span></p>
                             <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Sugestão:</strong> ${item.sugestao_melhora}</p>
                         </div>
@@ -2134,7 +2130,7 @@ ${scriptContent}
         };
 
         // ==========================================================
-        // NOVA FUNÇÃO PARA ATUALIZAR A BARRA DE PROGRESSO
+        // NOVA FUNÇÃO PARA ATUALIZAR A BARRA DE PROGRESO
         // ==========================================================
         const updateProgressBar = () => {
             // Lista de todas as tarefas que contam para o progresso
